[package]
name = "reiterate"
version = "0.1.3"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
edition = "2018"
description = "Iterator adaptor with caching that allows reiterating over the same iterator through the cache"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/reiterate/"
repository = "https://github.com/manishearth/reiterate"
keywords = ["iterator", "cache", "data-structure"]
categories = ["data-structures", "caching"]

[dependencies]
elsa = "1.0.1"
stable_deref_trait = "1.1.1"
